Fix inline panels icons spacing

--- a/styles/sass/partials/_inline-controls-panel.scss
+++ b/styles/sass/partials/_inline-controls-panel.scss
@@ -38,7 +38,7 @@
     font-size: 11px;
     font-family: 'Open Sans';
     padding: 5px 20px 10px 10px;
-    margin-top: 10px;
+    margin-top: 0px;
     background: #E6ECF2;
     box-shadow: 0px 1px 2px #ADADAD;
     color: #253A4E;
